Fixed some layout bugs.

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -12,6 +12,8 @@ form{
   display: flex;
   flex-direction: row;
   padding: 0.8em 0;
+  margin: 0 auto;
+  max-width: 600px;
   @media screen and (max-width: 500px) {
     display: block;
   }
