--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -201,7 +201,9 @@ h1{
 .section--students {
   background: white;
   width:90%;
+  max-width: 1200px;
   margin:0 auto;
+  box-shadow: 0 9px 38px rgba(0,0,0,0.30), 0 6px 12px rgba(0,0,0,0.22);
   @media screen and (max-width: $breakpoint) {
       width:100%;
       height:100%;
@@ -228,6 +230,7 @@ h1{
         &:nth-child(2) {
           position: absolute;
           top: 0;
+          left: 0;
           opacity: 0;
         }
       }
